fix text overflow

--- a/src/scss/_parts/_list-group.scss
+++ b/src/scss/_parts/_list-group.scss
@@ -90,6 +90,8 @@
     h3 {
       line-height: 30px;
       height: 30px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
     p {
       line-height: 20px;
